# w3terrain-godot-extension

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  ProjectOptions.cmake  README.md  vcpkg.json
demo/: camera.gd  camera.gd.uid  debug_axis.gd  debug_axis.gd.uid  debug_camera.gd  debug_camera.gd.uid  default_bus_layout.tres  draw_3d_example.gd.uid  export_presets.cfg  map_cell_selector.gd  map_cell_selector.gd.uid  normals.gdshader  normals.gdshader.uid  project.godot  scene_deadlock.tscn  scene_deadlock_test.tscn  scene_demo.tscn  scene_demo_test.tscn  scene_legends_new.tscn  scene_legends_test.tscn  scene_ui_cell.gd  scene_ui_cell.gd.uid  scene_ui_cell.tscn  scene_ui_edit.gd  scene_ui_edit.gd.uid  scene_ui_edit.tscn  scene_ui_map.gd  scene_ui_map.gd.uid  scene_ui_map.tscn  static_body_3d.gd  static_body_3d.gd.uid  test_5x5.tscn  test_5x9.tscn  test_9x9.tscn  w3map_node.gd  w3map_node.gd.uid
demo/assets/shaders/: debug.gdshader  debug.gdshader.uid  terrain_cliff.gdshader  terrain_cliff.gdshader.uid  terrain_ground.gdshader  terrain_ground.gdshader.uid  water.gdshader  water.gdshader.uid  water1.gdshader  water1.gdshader.uid  water_simple.gdshader  water_simple.gdshader.uid  wireframe.gdshader  wireframe.gdshader.uid
demo/assets/test/Cliff/: Cliff0.png.import  Cliff1.png.import  Cliff2.png.import
demo/assets/test/Geosets/: city_cliffs.obj.import  city_keys.json  city_ramps.obj.import  ground_cliffs.obj.import  ground_keys.json  ground_ramps.obj.import
demo/assets/test/Ground/: Ground0.png.import  Ground1.png.import  Ground13.png.import  Ground2.png.import
demo/assets/test/Maps/: Demo01.w3e  Demo01.w3e.uid  test_5x5.w3e  test_5x5.w3e.uid  test_9x9.w3e  test_9x9.w3e.uid  test_9x9_ramp_h.w3e  test_9x9_ramp_h.w3e.uid  test_9x9_ramp_v.w3e  test_9x9_ramp_v.w3e.uid  test_w3e_5x9.w3e  test_w3e_5x9.w3e.uid
demo/assets/textures/: test_uv.png.import  water_foam.png.import
src/: register_types.cpp
src/w3terrain/: w3defs.h  w3e.cpp  w3e.h  w3eresource.cpp  w3eresource.h  w3mapassets.h  w3mapassets_impl.cpp  w3mapassets_impl.h  w3mapbindings.cpp  w3mapbindings.h  w3mapbindingseditor.cpp  w3mapbindingseditor.h  w3mapcollector.h  w3mapcollector_impl.cpp  w3mapcollector_impl.h  w3mapinformator.h  w3mapinformator_impl.cpp  w3mapinformator_impl.h  w3mapinformator_rt.cpp  w3mapnode.h  w3mapnode_collect.cpp  w3mapnode_load.cpp  w3mapnode_main.cpp  w3mapruntimemanager.h  w3mapruntimemanager_impl.cpp  w3mapruntimemanager_impl.h  w3mapsection.cpp  w3mapsection.h  w3mapsectionmanager.h  w3mapsectionmanager_impl.cpp  w3mapsectionmanager_impl.h  w3math.h  w3surface.cpp  w3surface.h  w3surfaceground.cpp  w3surfaceground.h  w3surfaceground_assets.cpp  w3surfacewater.cpp  w3surfacewater.h
test/: CMakeLists.txt  collector_test.cpp  informator_ramp_test.cpp  informator_test.cpp  main.cpp  mock_uitils.h  runtime_manager_test.cpp  section_manager_test.cpp
